# server/internal/di/di.go
@@ -318,6 +318,9 @@ func BigBang(options *Options) (*mux.Router, func() error, error) {
 	router.HandleFunc("/docker-svc/container", appl(func(w http.ResponseWriter, r *http.Request) {
 		dockerService.RunContainer(w, r)
 	})).Methods("OPTIONS", "PUT")
+	router.HandleFunc("/docker-svc/image", appl(func(w http.ResponseWriter, r *http.Request) {
+		dockerService.BuildImage(w, r)
+	})).Methods("OPTIONS", "PUT")
 	router.HandleFunc("/docker-svc/container/{hash}/is-running", appl(func(w http.ResponseWriter, r *http.Request) {
 		dockerService.ContainerIsRunning(w, r)
 	})).Methods("OPTIONS", "GET")
